# code128

./: .gitignore  CMakeLists.txt  README.md  code128auto.h.in
src/: CMakeLists.txt  code128.cpp  code128auto.h
test/: ex1.txt
